# teste-tecnico-daniel

./: .gitignore  Readme.md  client.py  pyproject.toml  pytest.ini  server.py  setup.sh
even-odd-project/: client.py  docker-compose.yml  even_service.py  odd_service.py  requirements.txt  server.py  test_server.py
even-odd-project/server/: Dockerfile  client_model.py  requirements.txt  server.py  server_cp.py  structlog_config.py
even-odd-project/services/even-service/: Dockerfile  even_service.py  requirements.txt
even-odd-project/services/even_service/: Dockerfile  client_model.py  even_service.py
even-odd-project/services/odd-service/: Dockerfile  client_model.py  odd_service.py  structlog_config.py
even-odd-project/services/odd_service/: Dockerfile  odd_service.py  requirements.txt
even-odd-project/tests/: test_endpoints.py  test_even_service.py  test_odd_service.py
even-odd-project/validator/: Dockerfile  valid.sh
even_odd_project/: client.py  docker-compose.yml
even_odd_project/server/: Dockerfile  logging_config.py  models.py  server.py
even_odd_project/services/even_service/: client_model.py  even_service.py
even_odd_project/services/odd_service/: Dockerfile  client_model.py  odd_service.py
even_odd_project/tests/: conftest.py  test_endpoints.py  test_even_service.py  test_odd_service.py
even_odd_project/validator/: Dockerfile  valid.sh
